new-k8s/lb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-ui
  namespace: ecommerce
spec:
  type: LoadBalancer
  selector:
    app: ecommerce-ui
  ports:
    - port: 80
      targetPort: 80
