new-k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ui-ingress
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp   # 👈 correctly indented 4 spaces under rules
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-ui
                port:
                  number: 80
